Resolvendo SH e Issues